--- a/src/ui/app-container/style.scss
+++ b/src/ui/app-container/style.scss
@@ -2,4 +2,7 @@
     color: rgb(200, 200, 200);
     font-size: 8pt;
     font-style: italic;
+    position: fixed;
+    bottom: 0;
+    right: 0;
 }
